added basic functionality. Still need to work on resizing

--- a/login.html
+++ b/login.html
@@ -7,6 +7,31 @@
     <title>Carlos Lacerda's Login Ui Project</title>
 </head>
 <body>
-    
+    <!-- login box container -->
+
+    <div class="container">
+<!--         Sign in Header -->
+        <h1 class= "header">
+            Sign in
+        </h1>
+
+        <div class="username-box">
+                <form action="">
+                    <input type="text" id="input-text" name="Username" placeholder="Username"><br>
+                </form>
+        </div>
+
+        <div class="password-box">
+            <form action="">
+                <input type="password" id="input-text" name="Password" placeholder="Password">
+            </form>
+        </div>
+
+        <div class="sign-in-button">
+            <button type="submit" form="username-box, password-box"> Sign in</button>
+        </div>
+
+    </div>
+
 </body>
 </html>
