added proper centering when resizing window

--- a/login.html
+++ b/login.html
@@ -7,6 +7,8 @@
     <title>Carlos Lacerda's Login Ui Project</title>
 </head>
 <body>
+    <div class="background">
+
     <!-- login box container -->
 
     <div class="container">
@@ -17,13 +19,13 @@
 
         <div class="username-box">
                 <form action="">
-                    <input type="text" id="input-text" name="Username" placeholder="Username"><br>
+                    <input type="text" id="username-input" name="Username" placeholder="Username"><br>
                 </form>
         </div>
 
         <div class="password-box">
             <form action="">
-                <input type="password" id="input-text" name="Password" placeholder="Password">
+                <input type="password" id="password-input" name="Password" placeholder="Password">
             </form>
         </div>
 
@@ -33,5 +35,6 @@
 
     </div>
 
+    </div>
 </body>
 </html>
