--- a/login.html
+++ b/login.html
@@ -7,34 +7,17 @@
     <title>Carlos Lacerda's Login Ui Project</title>
 </head>
 <body>
-    <div class="background">
-
     <!-- login box container -->
         <div class="container">
-
             <!--Sign in Header -->
-            <div class= "header">
-                Sign in
-            </div>
-
-            <div >
-                <form action="">
-                    <input class="sign-in-input" type="text" id="username-input" name="Username" placeholder="Username" required><br>
-                </form>
-            </div>
-
-            <div>
-                <form action="">
-                    <input class="sign-in-input" type="password" id="password-input" name="Password" placeholder="Password" required>
-                </form>
-            </div>
-
-            <div>
-                <button class="sign-in-button" type="submit" form="sign-in-input"> Sign in</button>
-            </div>
-
+            <div class= "header">Sign in</div>
+            <form action="">
+                <input class="sign-in-input" type="text" id="username-input" name="Username" placeholder="Username" required>
+            </form>
+            <form action="">
+                <input class="sign-in-input" type="password" id="password-input" name="Password" placeholder="Password" required>
+            </form>
+            <button class="sign-in-button" type="submit" form="sign-in-input"> Sign in</button>
         </div>
-
-    </div>
 </body>
 </html>
