--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
         <div class="container">
             <!--Sign in Header -->
             <div class= "header">Sign in</div>
-            <form action="">
+            <form>
                 <input class="sign-in-input" type="text" id="username-input" name="Username" placeholder="Username" required>
             </form>
             <form action="">
